--- a/Aplicacion/Presentacion/RecuperosYMandatos/Content/assets/css/form-elements.css
+++ b/Aplicacion/Presentacion/RecuperosYMandatos/Content/assets/css/form-elements.css
@@ -1,16 +1,17 @@
 
 input[type="text"], 
-input[type="password"], 
+input[type="password"],
+select,
 textarea, 
 textarea.form-control {
-	height: 50px;
-    margin: 0;
+	height: 40px;
+    margin: 1px;
     padding: 0 20px;
     vertical-align: middle;
     background: #fff;
     border: 3px solid #fff;
     font-family: 'Roboto', sans-serif;
-    font-size: 16px;
+    font-size: 13px;
     font-weight: 300;
     line-height: 50px;
     color: #888;
@@ -48,16 +49,16 @@ textarea::-webkit-input-placeholder, textarea.form-control::-webkit-input-placeh
 
 
 button.btn {
-	height: 50px;
+	height: 40px;
     margin: 0;
     padding: 0 20px;
     vertical-align: middle;
     background: #de615e;
     border: 0;
     font-family: 'Roboto', sans-serif;
-    font-size: 16px;
+    font-size: 15px;
     font-weight: 300;
-    line-height: 50px;
+    line-height: 40px;
     color: #fff;
     -moz-border-radius: 4px; -webkit-border-radius: 4px; border-radius: 4px;
     text-shadow: none;
