--- a/Aplicacion/Presentacion/RecuperosYMandatos/Views/Home/DatosContacto.cshtml
+++ b/Aplicacion/Presentacion/RecuperosYMandatos/Views/Home/DatosContacto.cshtml
@@ -1,41 +1,67 @@
 ﻿
 @model RecuperosYMandatos.Models.Deudor
 <div id='datosContacto'>
-    @using (Ajax.BeginForm("SaveOrUpdate", "Deudor", new AjaxOptions { InsertionMode = InsertionMode.Replace, UpdateTargetId = "datosContacto", OnBegin = "deudor.confirmarDatosContacto('#contenedordatosContacto');" }))
+    @using (Ajax.BeginForm("Pregunta1", "Preguntas", new AjaxOptions { InsertionMode = InsertionMode.Replace, UpdateTargetId = "datosContacto" }))
     {
         <div class="row" >
-            <div class="col-sm-6 col-sm-offset-3 ">
+            <div class="">
                 <div class="form-top">
                     <div class="form-top-left">
-                        <h3>Por favor, ingrese sus datos de contacto.</h3>
+                        <h3>Por favor, ingrese sus datos de contacto para continuar con la registración.</h3>
                     </div>
                     <div class="form-top-right">
                         <i class="fa fa-lock"></i>
                     </div>
                 </div>
-                <div class="form-bottom" id="contenedordatosContacto">
+                <div class="form-bottom" id="contenedordatosContacto" style="height:100%;">
                     @Html.HiddenFor(model => model.ID)
                     <div class="form-group" align="center">
-                        <label class="sr-only" for="form-username">Apellido</label>
-                        <input type="text" name="Apellido" placeholder="Apellido" class="my-el protip" id="apellido">
+                            <label>Número de identificación proporcionado</label>
+                            <input type="text" name="ID" placeholder="" class="my-el protip1" style="width:100px;">
+                      </div>
+                    <div class="form-group" align="center">
+                        <input type="text" name="Email" placeholder="Email" class="my-nombre protip" id="email" style="width:330px;">
                     </div>
                     <div class="form-group" align="center">
-                        <label class="sr-only" for="form-username">Nombre</label>
-                        <input type="text" name="Nombre" placeholder="Nombre" class="my-nombre protip" id="nombre">
+                        <input type="text" name="Codarea" placeholder="Cód.área" class="my-nombre protip" id="celular" style="width:90px;">
+                        <input type="text" name="Prefijo1" placeholder="Prefijo" class="my-nombre protip" id="celular1" style="width:85px;">
+                        <input type="text" name="Prefijo" placeholder="Número de teléfono" class="my-nombre protip" id="celular2" style="width:160px;">
+                        @Html.DropDownList("Compania", new List<SelectListItem>() { new SelectListItem() { Text = "Claro", Value = "#" },
+                         new SelectListItem() { Text = "Personal", Value = "#" }, }, "Compañia", new { @style = "height:40px; width:130px; font-size:13px; padding-bottom: 8px;", @class = "form-control" })
                     </div>
                     <div class="form-group" align="center">
-                        <label class="sr-only" for="form-username">Telefono celular</label>
-                        <input type="text" name="Telefono_celular" placeholder="Telefono celular..." class="my-telefono_celular protip" id="telefono_celular">
+                        @Html.DropDownList("Pais", new List<SelectListItem>() {new SelectListItem() { Text = "Argentina", Value = "#" },
+                        new SelectListItem() { Text = "Mexico", Value = "#" }, }, "Pais", new { @style = "height:40px; width:235px; font-size:13px;", @class = "form-control" })
+                        @Html.DropDownList("Provincia", new List<SelectListItem>() { new SelectListItem() { Text = "CUIT", Value = "#" },
+                        new SelectListItem() { Text = "CUIL", Value = "#" }, }, "Provincia", new { @style = "height:40px; width:235px; font-size:13px;", @class = "form-control" })
                     </div>
                     <div class="form-group" align="center">
-                        <label class="sr-only" for="form-username">Correo electrónico</label>
-                        <input type="text" name="Correo_electronico" placeholder="Correo electrónico..." class="my-correo_electronico protip" id="correo_electronico">
+                        @Html.DropDownList("ee", new List<SelectListItem>() { new SelectListItem() { Text = "CUIT", Value = "#" },
+                       new SelectListItem() { Text = "CUIL", Value = "#" }, }, "CUIT", new { @style = "height:40px; width:100px; font-size:13px;", @class = "form-control" })
+                        <input type="text" name="Prefijos" placeholder="Su identidad" class="my-nombre protip" id="celular3" style="height:40px;width:220px;">
                     </div>
                     <div class="form-group" align="center">
-                                <button type="submit" class="btn">Contiunuar</button>
-                        </div>
+                        @Html.DropDownList("www", new List<SelectListItem>() { new SelectListItem() { Text = "CUIT", Value = "#" },
+                       new SelectListItem() { Text = "CUIL", Value = "#" }, }, "CUIT", new { @style = "height:40px; width:100px; font-size:13px;", @class = "form-control" })
+                        <input type="text" name="Prefijoa" placeholder="Identidad Persona Jurídica" class="my-nombre protip" id="celular4" style="height:40px;width:220px;">
+                    </div>
+                    <div class="form-group" align="center">
+                        @Html.DropDownList("www", new List<SelectListItem>() { new SelectListItem() { Text = "Seleccione su pregunta de Seguridad", Value = "#" },
+                       new SelectListItem() { Text = "CUIL", Value = "#" }, }, "Seleccione su pregunta de Seguridad", new { @style = "height:40px; width:400px; font-size:13px;", @class = "form-control" })
+                    </div>
+                    <div class="form-group" align="center">
+                        <input type="text" name="Prefijoa" placeholder="Respuesta" class="my-nombre protip" id="celular4" style="height:40px;width:400px;">
+                    </div>
+                    <div class="form-group" align="center">
+                        <label>Se enviará un código de activación a su celular, por SMS y enlace de reactivación por e@mail - VERIFIQUE EN SU CASILLA DE SPAM -</label>
+                    </div>
+
+                    <div class="form-group" align="center">
+                        <button type="submit" class="btn">Iniciar Registro</button>
+                    </div>
                 </div>
             </div>
+
         </div>
     }
     </div>
