--- a/Aplicacion/Presentacion/RecuperosYMandatos/Views/Home/Registracion.cshtml
+++ b/Aplicacion/Presentacion/RecuperosYMandatos/Views/Home/Registracion.cshtml
@@ -4,7 +4,7 @@
                     <div class="form-top">
                         <div class="form-top-left">
                             <h3>Identifíquese en nuestro sitio</h3>
-                            <p>Ingrese su nombre de usuario y contraseña:</p>
+                            <p>Ingrese su nombre de usuario y contraseña</p>
                         </div>
                         <div class="form-top-right">
                             <i class="fa fa-lock"></i>
@@ -12,23 +12,24 @@
                     </div>
                     <div class="form-bottom">
                         <form role="form" action="" method="post" class="login-form">
-                            <div class="form-group">
+                            <div class="form-group" align="center">
                                 <label class="sr-only" for="form-username">Usuario</label>
-                                <input type="text" name="form-username" placeholder="Usuario..." class="form-username form-control" id="form-username">
+                                <input type="text" name="form-username" placeholder="Email" class="form-username form-control" id="form-username" style="width:250px;">
                             </div>
-                            <div class="form-group">
+                            <div class="form-group" align="center">
                                 <label class="sr-only" for="form-password">Contraseña</label>
-                                <input type="password" name="form-password" placeholder="Contraseña..." class="form-password form-control" id="form-password">
+                                <input type="password" name="form-password" placeholder="Contraseña" class="form-password form-control" id="form-password" style="width:250px;">
                             </div>
                             <div class="form-group" align="center">
                                 <div class="g-recaptcha" data-sitekey="6LfUFFIUAAAAALxkyEMc3vi4yRspOoD_ykUuf5lZ"></div>
+                                <button type="submit" class="btn" style="width:250px;">Ingresar</button>
                             </div>
-                            <button type="submit" class="btn">Iniciar sesión</button>
+                            
 
                         </form>
                     </div>
                     <div class="form-bottom">
-                        @Html.ActionLink("¿Olvidó su Usuario y/o Contraseña?", "Registracion","Home")
+                        @Html.ActionLink("¿Olvidó su Usuario y/o Contraseña?", "OlvidoContraseña","Home")
                     </div>
                     
                 </div>
