Redireccion de URLs

--- a/Aplicacion/Presentacion/RecuperosYMandatos/Views/Deudor/Acreencias.cshtml
+++ b/Aplicacion/Presentacion/RecuperosYMandatos/Views/Deudor/Acreencias.cshtml
@@ -44,7 +44,7 @@
                                     <td>$1.100,00</td>
                                     <td>$269,24</td>
                                     <td>
-                                        <a data-value="" href="@Url.Action("Index", "Users")" class="btnEdit">Detalle</a> |
+                                        <a data-value="" href="@Url.Action("ComposicionDeuda", "Deudor")" class="btnEdit">Detalle</a> |
                                         <a data-value="" href="javascript:void(0)" class="btnEdit">Formas de Pago</a>
                                     </td>
                                 </tr>
