--- a/Aplicacion/Presentacion/RecuperosYMandatos/Views/Deudor/PropuestaPago2.cshtml
+++ b/Aplicacion/Presentacion/RecuperosYMandatos/Views/Deudor/PropuestaPago2.cshtml
@@ -42,7 +42,7 @@
                     <table>
                         <tr>
                             <td>
-                                <textarea style="display:inline;" name="Text1" cols="80" rows="15">Los gastos se me dispararon y, con el aumento del gas, me será imposible pagar la deuda y el servicio es por ello que he planificado el pago en cuotas de $200.- Lo que si podría pagar, antes del 25 $400 sino me cortan el gas.</textarea>
+                                <textarea style="display:;" name="Text1" cols="80" rows="15">Los gastos se me dispararon y, con el aumento del gas, me será imposible pagar la deuda y el servicio es por ello que he planificado el pago en cuotas de $200.- Lo que si podría pagar, antes del 25 $400 sino me cortan el gas.</textarea>
                             </td>
                         </tr>
                     </table>
