--- a/Aplicacion/Presentacion/RecuperosYMandatos/Views/Deudor/ComposicionDeuda.cshtml
+++ b/Aplicacion/Presentacion/RecuperosYMandatos/Views/Deudor/ComposicionDeuda.cshtml
@@ -48,7 +48,7 @@
                                 <td>$100,00</td>
                                 <td>$34,12</td>
                                 <td>
-                                    <a data-value="" href="@Url.Action("Index", "Users")" class="btnEdit">Informar Pago</a>
+                                    <a data-value="" href="@Url.Action("InformeDePago", "Deudor")" class="btnEdit">Informar Pago</a>
                                 </td>
                             </tr>
                         </tbody>
