--- a/Aplicacion/Presentacion/RecuperosYMandatos/Views/Home/Index.cshtml
+++ b/Aplicacion/Presentacion/RecuperosYMandatos/Views/Home/Index.cshtml
@@ -5,10 +5,7 @@
 }
 @model RecuperosYMandatos.Models.Deudor
 <div id='datoIdentificacion'>
-    @*@using (Ajax.BeginForm("DeudorGetById", "Deudor", new AjaxOptions { InsertionMode = InsertionMode.Replace, UpdateTargetId = "datoIdentificacion", OnBegin = "deudor.confirmarDatoIdentificacion('#contenedordatoIdentificacion');" }))*@
-
-
-   @using (Ajax.BeginForm("DatosContacto", "Home", new AjaxOptions { InsertionMode = InsertionMode.Replace, UpdateTargetId = "datoIdentificacion" }))
+   @using (Ajax.BeginForm("DatosContacto", "Home", new AjaxOptions { InsertionMode = InsertionMode.Replace, UpdateTargetId = "datoIdentificacion", OnBegin = "return deudor.confirmarDatoIdentificacion('#contenedordatoIdentificacion');" }))
     {
         <div class="row">
             <div class="col-sm-6 col-sm-offset-3 form-box">
