--- a/Aplicacion/Presentacion/RecuperosYMandatos/Views/Deudor/ComposicionPago5.cshtml
+++ b/Aplicacion/Presentacion/RecuperosYMandatos/Views/Deudor/ComposicionPago5.cshtml
@@ -80,7 +80,7 @@
 
                 </div>
                 <div class="form-group" align="center">
-                    <button type="submit" class="btn">Voy a Pagar el Total / Informar Pago</button>
+                    <button type="button" class="btn" onclick="window.location='@Url.Action("PropuestaPago", "Deudor")'">Voy a Pagar el Total / Informar Pago</button>
                     <button type="submit" class="btn">Solicitar Plan de Pago</button>
                 </div>
             </div>
