--- a/Aplicacion/Presentacion/RecuperosYMandatos/Views/Deudor/ComposicionPago.cshtml
+++ b/Aplicacion/Presentacion/RecuperosYMandatos/Views/Deudor/ComposicionPago.cshtml
@@ -33,7 +33,7 @@
                 </div>
                 
                 <div class="form-group" align="center">
-                    <button type="submit" class="btn">Voy a Pagar / Informar Pago</button>
+                    <button type="button" class="btn" onclick="window.location='@Url.Action("ComposicionPago2", "Deudor")'"> Voy a Pagar / Informar Pago</button>
                     <button type="submit" class="btn">No estoy en condiciones de pagar</button>
                 </div>
             </div>
