--- a/Aplicacion/Presentacion/RecuperosYMandatos/Views/Deudor/PropuestaPago2.cshtml
+++ b/Aplicacion/Presentacion/RecuperosYMandatos/Views/Deudor/PropuestaPago2.cshtml
@@ -51,7 +51,7 @@
                
                 <div class="form-group" align="center">
                     <button type="submit" class="btn">Voy a Pagar el Plan de Pago Propuesto</button>
-                    <button type="submit" class="btn">Solicitar Otro Plan de Pago</button>
+                    <button type="button" class="btn" onclick="window.location='@Url.Action("PropuestaPago", "Deudor")'">>Solicitar Otro Plan de Pago</button>
                 </div>
             </div>
         </div>
